WebKit/qt/Api/qwebpage_p.h
@@ -44,7 +44,6 @@ namespace WebCore {
     class EditorClientQt;
     class Element;
     class InspectorController;
-    class NotificationPresenterClientQt;
     class Node;
     class Page;
     class Frame;
@@ -191,8 +190,6 @@ public:
     bool inspectorIsInternalOnly; // True if created through the Inspect context menu action
     Qt::DropAction m_lastDropAction;
     
-    WebCore::NotificationPresenterClientQt* notificationPresenterClient;
-
     QString viewMode;
 
     static bool drtRun;
