WebKit/qt/WebCoreSupport/FrameLoaderClientQt.cpp
@@ -51,7 +51,6 @@
 #include "HTMLFormElement.h"
 #include "HTMLPlugInElement.h"
 #include "HTTPParsers.h"
-#include "NotificationPresenterClientQt.h"
 #include "NotImplemented.h"
 #include "QNetworkReplyHandler.h"
 #include "ResourceHandleInternal.h"
@@ -641,9 +640,6 @@ void FrameLoaderClientQt::dispatchDidClearWindowObjectInWorld(DOMWrapperWorld* w
 
     if (m_webFrame) {
         emit m_webFrame->javaScriptWindowObjectCleared();
-#if ENABLE(NOTIFICATIONS)
-        m_webFrame->page()->d->notificationPresenterClient->clearNotificationsList();
-#endif
     }
 }
 
