WebKit/qt/WebCoreSupport/NotificationPresenterClientQt.cpp
@@ -38,84 +38,111 @@
 #include "KURL.h"
 #include "SecurityOrigin.h"
 
-#include "qwebframe.h"
 #include "qwebkitglobal.h"
-#include "qwebpage.h"
 #include <QtGui>
-
 
 #if ENABLE(NOTIFICATIONS)
 
-using namespace WebCore;
+namespace WebCore {
+
+const double notificationTimeout = 10.0;
 
 bool NotificationPresenterClientQt::dumpNotification = false;
 
+NotificationPresenterClientQt* s_notificationPresenter = 0;
+
+NotificationPresenterClientQt* NotificationPresenterClientQt::notificationPresenter()
+{
+    if (s_notificationPresenter)
+        return s_notificationPresenter;
+
+    s_notificationPresenter = new NotificationPresenterClientQt();
+    return s_notificationPresenter;
+}
+
 NotificationIconWrapper::NotificationIconWrapper()
+    : m_closeTimer(this, &NotificationIconWrapper::close)
 {
 #ifndef QT_NO_SYSTEMTRAYICON
     m_notificationIcon = 0;
 #endif
+    m_closeTimer.startOneShot(notificationTimeout);
 }
 
 NotificationIconWrapper::~NotificationIconWrapper()
 {
-#ifndef QT_NO_SYSTEMTRAYICON
-    delete m_notificationIcon;
-#endif
 }
 
-NotificationPresenterClientQt::NotificationPresenterClientQt(QWebPage* page) : m_page(page)
+void NotificationIconWrapper::close(Timer<NotificationIconWrapper>*)
 {
+    NotificationPresenterClientQt::notificationPresenter()->cancel(this);
+}
+
+NotificationPresenterClientQt::NotificationPresenterClientQt() : m_clientCount(0)
+{
+}
+
+void NotificationPresenterClientQt::removeClient()
+{
+    m_clientCount--;
+    if (!m_clientCount) {
+        s_notificationPresenter = 0;
+        delete this;
+    }
 }
 
 bool NotificationPresenterClientQt::show(Notification* notification)
 {
-    QHash <Notification*, NotificationIconWrapper*>::Iterator end = m_notifications.end();
-    QHash <Notification*, NotificationIconWrapper*>::Iterator iter = m_notifications.begin();
-
+    // FIXME: workers based notifications are not supported yet.
+    if (notification->scriptExecutionContext()->isWorkerContext())
+        return false;
+    notification->setPendingActivity(notification);
     if (!notification->replaceId().isEmpty()) {
-        while (iter != end) {
-            Notification* existingNotification = iter.key();
-            if (existingNotification->replaceId() == notification->replaceId() && existingNotification->url().protocol() == notification->url().protocol() && existingNotification->url().host() == notification->url().host())
-                break;
-            iter++;
-        }
-    } else
-        iter = end;
-
-    if (dumpNotification) {
-        if (iter != end) {
-            Notification* oldNotification = iter.key();
-            printf("REPLACING NOTIFICATION %s\n", oldNotification->isHTML() ? QString(oldNotification->url().string()).toUtf8().constData() : QString(oldNotification->contents().title()).toUtf8().constData());
-        }
-        if (notification->isHTML())
-            printf("DESKTOP NOTIFICATION: contents at %s\n", QString(notification->url().string()).toUtf8().constData());
-        else {
-            printf("DESKTOP NOTIFICATION:%s icon %s, title %s, text %s\n",
-                notification->dir() == "rtl" ? "(RTL)" : "",
-                QString(notification->contents().icon().string()).toUtf8().constData(), QString(notification->contents().title()).toUtf8().constData(), 
-                QString(notification->contents().body()).toUtf8().constData());
-        }
+        removeReplacedNotificationFromQueue(notification);
     }
-
-    if (iter != end) {
-        sendEvent(iter.key(), eventNames().closeEvent);
-        delete m_notifications.take(iter.key());
-    }
-    NotificationIconWrapper* wrapper = new NotificationIconWrapper();
-    m_notifications.insert(notification, wrapper);
-    sendEvent(notification, "display");
-
-#ifndef QT_NO_SYSTEMTRAYICON
-    wrapper->m_notificationIcon = new QSystemTrayIcon;
-    wrapper->m_notificationIcon->show();
-    wrapper->m_notificationIcon->showMessage(notification->contents().title(), notification->contents().body());
-#endif
+    if (dumpNotification)
+        dumpShowText(notification);
+    displayNotification(notification, QByteArray());
     return true;
 }
 
+void NotificationPresenterClientQt::displayNotification(Notification* notification, const QByteArray& bytes)
+{
+    NotificationIconWrapper* wrapper = new NotificationIconWrapper();
+    m_notifications.insert(notification, wrapper);
+    QString title;
+    QString message;
+    // FIXME: download & display HTML notifications
+    if (notification->isHTML())
+        message = notification->url().string();
+    else {
+        title = notification->contents().title();
+        message = notification->contents().body();
+    }
+
+#ifndef QT_NO_SYSTEMTRAYICON
+    QPixmap pixmap;
+    if (bytes.length() && pixmap.loadFromData(bytes)) {
+        QIcon icon(pixmap);
+        wrapper->m_notificationIcon = new QSystemTrayIcon(icon);
+    } else
+        wrapper->m_notificationIcon = new QSystemTrayIcon();
+#endif
+
+    sendEvent(notification, "display");
+
+    // Make sure the notification was not cancelled during handling the display event
+    if (m_notifications.find(notification) == m_notifications.end())
+        return;
+
+#ifndef QT_NO_SYSTEMTRAYICON
+    wrapper->m_notificationIcon->show();
+    wrapper->m_notificationIcon->showMessage(notification->contents().title(), notification->contents().body());
+#endif
+}
+
 void NotificationPresenterClientQt::cancel(Notification* notification)
-{  
+{
     if (dumpNotification) {
         if (notification->isHTML())
             printf("DESKTOP NOTIFICATION CLOSED: %s\n", QString(notification->url().string()).toUtf8().constData());
@@ -123,15 +150,28 @@ void NotificationPresenterClientQt::cancel(Notification* notification)
             printf("DESKTOP NOTIFICATION CLOSED: %s\n", QString(notification->contents().title()).toUtf8().constData());
     }
 
-    QHash <Notification*, NotificationIconWrapper*>::Iterator iter = m_notifications.find(notification);
-    if (iter != m_notifications.end())
-        sendEvent(iter.key(), eventNames().closeEvent);
+    NotificationsQueue::Iterator iter = m_notifications.find(notification);
+    if (iter != m_notifications.end()) {
+        sendEvent(notification, eventNames().closeEvent);
+        delete m_notifications.take(notification);
+        notification->unsetPendingActivity(notification);
+    }
+}
+
+void NotificationPresenterClientQt::cancel(NotificationIconWrapper* wrapper)
+{
+    NotificationsQueue::Iterator end = m_notifications.end();
+    NotificationsQueue::Iterator iter = m_notifications.begin();
+    while (iter != end && iter.value() != wrapper)
+        iter++;
+    if (iter != end)
+        cancel(iter.key());
 }
 
 void NotificationPresenterClientQt::notificationObjectDestroyed(Notification* notification)
 {
     // Called from ~Notification(), Remove the entry from the notifications list and delete the icon.
-    QHash <Notification*, NotificationIconWrapper*>::Iterator iter = m_notifications.find(notification);
+    NotificationsQueue::Iterator iter = m_notifications.find(notification);
     if (iter != m_notifications.end())
         delete m_notifications.take(notification);
 }
@@ -139,7 +179,7 @@ void NotificationPresenterClientQt::notificationObjectDestroyed(Notification* no
 void NotificationPresenterClientQt::requestPermission(SecurityOrigin* origin, PassRefPtr<VoidCallback> callback)
 {  
     if (dumpNotification)
-      printf("DESKTOP NOTIFICATION PERMISSION REQUESTED: %s\n", QString(origin->toString()).toUtf8().constData());
+        printf("DESKTOP NOTIFICATION PERMISSION REQUESTED: %s\n", QString(origin->toString()).toUtf8().constData());
 
     QString originString = origin->toString();
     QHash<QString, QList<RefPtr<VoidCallback> > >::iterator iter = m_pendingPermissionRequests.find(originString);
@@ -151,7 +191,7 @@ void NotificationPresenterClientQt::requestPermission(SecurityOrigin* origin, Pa
         callbacks.append(cb);
         m_pendingPermissionRequests.insert(originString, callbacks);
         if (requestPermissionFunction)
-            requestPermissionFunction(m_receiver, m_page, originString);
+            requestPermissionFunction(m_receiver, originString);
     }
 }
 
@@ -184,19 +224,52 @@ void NotificationPresenterClientQt::allowNotificationForOrigin(const QString& or
     }
 }
 
-void NotificationPresenterClientQt::clearNotificationsList()
+void NotificationPresenterClientQt::sendEvent(Notification* notification, const AtomicString& eventName)
 {
-    m_pendingPermissionRequests.clear();
-    while (!m_notifications.isEmpty()) {
-        QHash <Notification*, NotificationIconWrapper*>::Iterator iter = m_notifications.begin();
-        delete m_notifications.take(iter.key());
+    notification->dispatchEvent(Event::create(eventName, false, true));
+}
+
+void NotificationPresenterClientQt::removeReplacedNotificationFromQueue(Notification* notification)
+{
+    Notification* oldNotification = 0;
+    NotificationsQueue::Iterator end = m_notifications.end();
+    NotificationsQueue::Iterator iter = m_notifications.begin();
+
+    while (iter != end) {
+        Notification* existingNotification = iter.key();
+        if (existingNotification->replaceId() == notification->replaceId() && existingNotification->url().protocol() == notification->url().protocol() && existingNotification->url().host() == notification->url().host()) {
+            oldNotification = iter.key();
+            break;
+        }
+        iter++;
+    }
+
+    if (oldNotification) {
+        if (dumpNotification)
+            dumpReplacedIdText(oldNotification);
+        sendEvent(oldNotification, eventNames().closeEvent);
+        delete m_notifications.take(oldNotification);
+        oldNotification->unsetPendingActivity(oldNotification);
     }
 }
 
-void NotificationPresenterClientQt::sendEvent(Notification* notification, const AtomicString& eventName)
+void NotificationPresenterClientQt::dumpReplacedIdText(Notification* notification)
 {
-    RefPtr<Event> event = Event::create(eventName, false, true);
-    notification->dispatchEvent(event.release());
+    if (notification)
+        printf("REPLACING NOTIFICATION %s\n", notification->isHTML() ? QString(notification->url().string()).toUtf8().constData() : QString(notification->contents().title()).toUtf8().constData());
 }
 
+void NotificationPresenterClientQt::dumpShowText(Notification* notification)
+{
+    if (notification->isHTML())
+        printf("DESKTOP NOTIFICATION: contents at %s\n", QString(notification->url().string()).toUtf8().constData());
+    else {
+        printf("DESKTOP NOTIFICATION:%s icon %s, title %s, text %s\n",
+                notification->dir() == "rtl" ? "(RTL)" : "",
+            QString(notification->contents().icon().string()).toUtf8().constData(), QString(notification->contents().title()).toUtf8().constData(),
+            QString(notification->contents().body()).toUtf8().constData());
+    }
+}
+
+}
 #endif // ENABLE(NOTIFICATIONS)
