WebKit/qt/WebCoreSupport/NotificationPresenterClientQt.h
@@ -34,29 +34,35 @@
 
 #include "Notification.h"
 #include "NotificationPresenter.h"
+#include "Timer.h"
 
 #include <QMultiHash>
 #include <QSystemTrayIcon>
 
-
 #if ENABLE(NOTIFICATIONS)
-class QWebPage;
 
 namespace WebCore {
+
 class Document;
 class KURL;
 
-struct NotificationIconWrapper {
+class NotificationIconWrapper {
+public:
     NotificationIconWrapper();
     ~NotificationIconWrapper();
+    void close();
+    void close(Timer<NotificationIconWrapper>*);
 #ifndef QT_NO_SYSTEMTRAYICON
-    QSystemTrayIcon* m_notificationIcon;
+    OwnPtr<QSystemTrayIcon> m_notificationIcon;
 #endif
+    Timer<NotificationIconWrapper> m_closeTimer;
 };
+
+typedef QHash <Notification*, NotificationIconWrapper*> NotificationsQueue;
 
 class NotificationPresenterClientQt : public NotificationPresenter {
 public:
-    NotificationPresenterClientQt(QWebPage*);
+    NotificationPresenterClientQt();
     ~NotificationPresenterClientQt() {}
 
     /* WebCore::NotificationPresenter interface */
@@ -66,22 +72,32 @@ public:
     virtual void requestPermission(SecurityOrigin*, PassRefPtr<VoidCallback>);
     virtual NotificationPresenter::Permission checkPermission(const KURL&);
 
+    void cancel(NotificationIconWrapper*);
+
     void allowNotificationForOrigin(const QString& origin);
-    void clearNotificationsList();
 
     static bool dumpNotification;
 
     void setReceiver(QObject* receiver) { m_receiver = receiver; }
 
+    void addClient() { m_clientCount++; }
+    void removeClient();
+    static NotificationPresenterClientQt* notificationPresenter();
+
 private:
     void sendEvent(Notification*, const AtomicString& eventName);
-    QWebPage* m_page;
-    QMultiHash<QString,  QList<RefPtr<VoidCallback> > > m_pendingPermissionRequests;
-    QHash <Notification*, NotificationIconWrapper*> m_notifications;
+    void displayNotification(Notification*, const QByteArray&);
+    void removeReplacedNotificationFromQueue(Notification*);
+    void dumpReplacedIdText(Notification*);
+    void dumpShowText(Notification*);
+
+    int m_clientCount;
+    QHash<QString,  QList<RefPtr<VoidCallback> > > m_pendingPermissionRequests;
+    NotificationsQueue m_notifications;
     QObject* m_receiver;
 };
+
 }
 
 #endif
 #endif
-
