WebKitTools/DumpRenderTree/qt/DumpRenderTreeQt.cpp
@@ -135,9 +135,9 @@ void checkPermissionCallback(QObject* receiver, const QUrl& url, NotificationPer
     qobject_cast<DumpRenderTree*>(receiver)->checkPermission(url, permission);
 }
 
-void requestPermissionCallback(QObject* receiver, QWebPage* page, const QString& origin)
+void requestPermissionCallback(QObject* receiver, const QString& origin)
 {
-    qobject_cast<DumpRenderTree*>(receiver)->requestPermission(page, origin);
+    qobject_cast<DumpRenderTree*>(receiver)->requestPermission(origin);
 }
 
 WebPage::WebPage(QObject* parent, DumpRenderTree* drt)
@@ -167,7 +167,7 @@ WebPage::WebPage(QObject* parent, DumpRenderTree* drt)
     setNetworkAccessManager(m_drt->networkAccessManager());
     setPluginFactory(new TestPlugin(this));
 
-    DumpRenderTreeSupportQt::setNotificationsReceiver(this, m_drt);
+    DumpRenderTreeSupportQt::setNotificationsReceiver(m_drt);
     DumpRenderTreeSupportQt::setCheckPermissionFunction(checkPermissionCallback);
     DumpRenderTreeSupportQt::setRequestPermissionFunction(requestPermissionCallback);
 
@@ -919,9 +919,9 @@ void DumpRenderTree::checkPermission(const QUrl& url, NotificationPermission& pe
     permission = m_controller->checkDesktopNotificationPermission(url.scheme() + "://" + url.host()) ? NotificationAllowed : NotificationDenied;
 }
 
-void DumpRenderTree::requestPermission(QWebPage* page, const QString& origin)
+void DumpRenderTree::requestPermission(const QString& origin)
 {
-    DumpRenderTreeSupportQt::allowNotificationForOrigin(page, origin);
+    DumpRenderTreeSupportQt::allowNotificationForOrigin(origin);
 }
 
 #if defined(Q_WS_X11)
