WebKitTools/DumpRenderTree/qt/DumpRenderTreeQt.h
@@ -115,7 +115,7 @@ public Q_SLOTS:
     void statusBarMessage(const QString& message);
     void windowCloseRequested();
     void checkPermission(const QUrl&, NotificationPermission&);
-    void requestPermission(QWebPage* page, const QString&);
+    void requestPermission(const QString&);
 
 Q_SIGNALS:
     void quit();
